Implemented left click for flipping cards (Side note, clients don't get disconnected if they close the app normally)